--- a/user/user-interface/pom.xml
+++ b/user/user-interface/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>user</artifactId>
-        <groupId>com.mshejiyun.nebula</groupId>
+        <groupId>com.richard</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.mshejiyun.nebula</groupId>
+    <groupId>com-richard</groupId>
     <artifactId>user-interface</artifactId>
 
 </project>
